--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,8 @@
     <string name="red">Красный</string>
     <string name="questionOfChoosingColor">Какой цвет вы хотите выбрать?</string>
     <string name="confirm">Подтвердить</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment</string>
 
 </resources>
