--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Lesson1</string>
+    <string name="app_name">TrainingTasks</string>
 
     <string name="checkbox_checked">checkBox checked</string>
     <string name="checkBox_unchecked">checkBox unchecked</string>
